--- a/src/app/componentes/register-page/register-page.component.html
+++ b/src/app/componentes/register-page/register-page.component.html
@@ -3,16 +3,16 @@
     <div class="card">
       <div class="card-body">
         <h1 class="text-center">Crie a sua conta Agora</h1>
-        <form>
+        <form (submit)="onSubmitAddUser()">
           <div class="form-group">
             <label for="email">Email </label>
-            <input type="email" name="email" placeholder="" id="email" class="form-control">
+            <input type="text" name="email" id="email" [(ngModel)]="email" class="form-control">
           </div>
           <div class="form-group">
             <label for="password">Senha </label>
-            <input type="password" name="password" id="password" class="form-control">
+            <input type="password" name="password" id="password" [(ngModel)]="password" class="form-control">
           </div>
-          <input type="text" value="ENVIAR" class="btn btn-primary btn-block btn-lg">
+          <input type="submit" value="ENVIAR" class="btn btn-primary btn-block btn-lg">
           <h5 class="text-center">Já tem uma Conta? <a routerLink="/login">Iniciar Sessão</a></h5>
         </form>
       </div>
