--- a/src/app/componentes/login-page/login-page.component.html
+++ b/src/app/componentes/login-page/login-page.component.html
@@ -3,16 +3,16 @@
     <div class="card">
       <div class="card-body">
         <h1 class="text-center">Iniciar sessão</h1>
-        <form>
+        <form (submit)="onSubmitLogin()">
           <div class="form-group">
             <label for="email">Email </label>
-            <input type="email" name="email" placeholder="" id="email" class="form-control">
+            <input type="email" name="email" placeholder="" id="email" [(ngModel)]="email" class="form-control">
           </div>
           <div class="form-group">
             <label for="password">Senha </label>
-            <input type="password" name="password" id="password" class="form-control">
+            <input type="password" name="password" id="password" [(ngModel)]="password" class="form-control">
           </div>
-          <input type="text" value="LOGIN" class="btn btn-primary btn-block btn-lg">
+          <input type="submit" value="LOGIN" class="btn btn-primary btn-block btn-lg">
         </form>
       </div>
     </div>
